--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -18,7 +18,7 @@
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 		    <h1 class="mui-title">作业评论</h1>
 		</header>
-		<div class="mui-content">
+		<div class="mui-content mui-scroll">
 			<!--作业详情区-->
 		    <div class="homework-container">
 		    	<div class='student-info'>
