--- a/JiaoBaoYun-hb/html/scienceeducation/senedu-sub.html
+++ b/JiaoBaoYun-hb/html/scienceeducation/senedu-sub.html
@@ -157,7 +157,7 @@
 						} else {
 							SECity.array = SECity.array.concat(tempArr);
 						}
-						events.fireToPageNone('scienceeducation_home.html', 'cityInfo', SECity);
+						events.fireToPageNone('../scienceeducation/scienceeducation_home.html', 'cityInfo', SECity);
 						//刷新界面
 						mui.each(tempArr, function(index, element) {
 							//生成每一项
