--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -8,16 +8,16 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
-		<link href="../../css/qiuzhi/qiuzhi.css" rel="stylesheet" />
+		<link href="../../css/qiuzhi/qiuzhi-sub.css" rel="stylesheet" />
 	</head>
 
 	<body>
 		<div class="mui-content">
 			<div>
 				<div>
-					<p>专家风采</p>
+					<p><span></span>专家风采</p>
 				</div>
-				<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+				<div class="mui-scroll-wrapper ">
 					<div class="mui-scroll">
 						<a class="mui-control-item mui-active">
 							专家0
