--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -25,7 +25,7 @@
 					</div>
 				</div>
 				<div class="more-navigation">
-					<a class="iconfont icon-qita">
+					<a class="iconfont icon-qita11">
 						<!--导航-->
 					</a>
 					<p>导航</p>
