--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -14,25 +14,30 @@
 	<body>
 		<div class="mui-content">
 			<div>
-				<div>
-					<p><span></span>专家风采</p>
+				<div class="experts-show">
+					<p><span class="mui-icon iconfont icon-zhuanjia expert-icon"></span>专家风采</p>
 				</div>
-				<div class="mui-scroll-wrapper ">
-					<div class="mui-scroll">
-						<a class="mui-control-item mui-active">
-							专家0
-						</a>
-						<a class="mui-control-item">
-							专家1
-						</a>
-						<a class="mui-control-item">
-							专家2
-						</a>
-						<a class="mui-control-item">
-							专家3
-						</a>
-
-					</div>
+				<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+				    <div class="mui-scroll">
+				        <a class="mui-control-item mui-active">
+				            推荐
+				        </a>
+				        <a class="mui-control-item">
+				          热点
+				        </a>
+				        <a class="mui-control-item">
+				           北京
+				        </a>
+				        <a class="mui-control-item">
+				           社会
+				        </a>
+				        <a class="mui-control-item">
+				           娱乐
+				        </a>
+				        <a class="mui-control-item">
+				           科技
+				        </a>
+				    </div>
 				</div>
 			</div>
 			<div class="mui-scroll">
