样式，添加图标

--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -29,7 +29,17 @@
 		</header>
 		<div class="mui-content">
 			<div class="input-content">
-				<textarea id="input-content" placeholder="请按照老师的要求来完成作业吧"></textarea>
+				<textarea id="input-content" placeholder="请输入内容" value=""></textarea>
+				<!--一期暂时不插入图片-->
+				<div id="take_pic" class="take_pic">
+					<a class="mui-icon iconfont icon-xiangji"></a>
+				</div>
+				<div id="take_camero" class="take_camero">
+					<a class="mui-icon iconfont icon-shipin"></a>
+				</div>
+				<div id="get_gallery" class="get_gallery">
+					<a class="mui-icon iconfont icon-xiangce"></a>
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript">
