--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -18,7 +18,7 @@
 
 	<body>
 		<div class="mui-content">
-			<div class="navigation" role="navigation" style="background-color: white;height: 50px;">
+			<div class="navigation" role="navigation">
 				<div class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted main-navigation" >
 					<div id="subjects-container" class="mui-scroll tabs-channels" >
 					
