修改首页图标

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -30,8 +30,8 @@
 
 		<nav class="mui-bar mui-bar-tab ">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="../cloud/cloud_home.html">
-				<span class="mui-icon iconfont icon-shouye2"></span>
-				<span class="mui-tab-label">首页</span>
+				<span class="mui-icon iconfont icon-yunpan1"></span>
+				<span class="mui-tab-label">云盘</span>
 			</a>
 			<a id="tabclass" class="mui-tab-item" href="../scienceeducation/scienceeducation_home.html">
 				<span class="mui-icon iconfont icon-jiaoyu"></span>
