晒一晒界面调整

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -28,7 +28,7 @@
 		<div class="mui-content">
 			<textarea id="askTitle" placeholder="写下你的问题" style="height: 40px;margin-top: 5px;"></textarea>
 			<p style="margin-left: 10px;font-size: 14px;margin-top: -12px;">请添加问题的补充说明</p>
-			<div class="input-content" style="margin-top: 80px;">
+			<div class="input-content">
 				<textarea id="askNote" placeholder="请输入内容"></textarea>
 				<div id="take_pic" class="take_pic">
 					<a class="mui-icon iconfont icon-xiangji"></a>
