--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -33,14 +33,14 @@
 			</div>
 			
 				<div>
-					<p style="margin-top: 260px;margin-left: 10px;font-size: 15px;">发布到:</p>
+					<p style="margin-left: 10px;font-size: 15px;height: 30px;padding-top: 5px;">发布到:</p>
 				</div>
-				<div style="margin-left: 10px;background-color: lightgray;">
-				<div class="mui-checkbox mui-left mui-disabled" style="width:100; height:30px; float:left; display:inline; top: 0px;margin-left: -20px;">
+				<div style="margin-left: 10px;">
+				<div class="mui-checkbox mui-left mui-disabled" style="width:100; height:30px; float:left; display:inline;margin-left: -20px;">
 					<label style="font-size: 15px;">家校圈</label>
 					<input name="checkbox" value="0" type="checkbox" disabled="disabled" style="margin-top: -7px;" checked>
 				</div>
-				<div class="mui-checkbox mui-left" style="width:100; height:30px; float:left; display:inline; top: 0px;">
+				<div class="mui-checkbox mui-left" style="width:100; height:30px; float:left; display:inline; ">
 					<label style="font-size: 15px;">展现</label>
 					<input id="chenckBox" name="checkbox" value="1" type="checkbox" style="margin-top: -7px;">
 				</div>
