--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -49,6 +49,7 @@
 	<script>
 		var personIds = [];
 		mui.plusReady(function() {
+//			document.querySelector('.mui-content').style.marginTop=(localStorage.getItem('StatusHeightNo') * 1 + 45 + height) + 'px';
 			var groupInfo;
 			//界面监听传值
 			window.addEventListener('postGroupInfo', function(e) {
