--- a/JiaoBaoYun-hb/html/cloud/record_student_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_sub.html
@@ -55,7 +55,7 @@
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--数据列表-->
-				<ul class="mui-table-view" id="ul_table">
+				<ul class="mui-table-view" id="ul_table" style="word-break:break-all;">
 
 				</ul>
 			</div>
