--- a/JiaoBaoYun-hb/html/quan/studentdynamic_sub.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_sub.html
@@ -64,7 +64,7 @@
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--数据列表-->
-				<ul class="mui-table-view" id="ul_table">
+				<ul class="mui-table-view" id="ul_table" style="word-break:break-all;">
 					<!--<li class="mui-table-view-cell ">
 						<div class="mui-row">
 							<div class="mui-col-sm-2 mui-col-xs-2">
@@ -281,7 +281,7 @@
 						}
 						mui.each(data.RspData.Data, function(index, item) {
 							NotesList.Data.push(item);
-							console.log(index + '|' + JSON.stringify(item));
+							//console.log(index + '|' + JSON.stringify(item));
 							createNotes(item);
 						});
 						if(data.RspData.Data.length == 0) {
