留言板昵称字数限制

--- a/JiaoBaoYun-hb/html/quan/leave-sub.html
+++ b/JiaoBaoYun-hb/html/quan/leave-sub.html
@@ -416,7 +416,7 @@
 					'<img class=" dynamic-personal-image" src="' + leaveArray[i].uimg + '">' +
 					'</div>' +
 					'<div class="mui-media-body dynamic-padding-left-10px">' +
-					'<h6>' + leaveArray[i].unick + '</h6>' +
+					'<h6>' + events.shortForString(leaveArray[i].unick,12) + '</h6>' +
 					'</div></div>' +
 					'<div style= "margin-top:-10px"  class = "chat_content_left">' +
 					leaveArray[i].MsgContent +
