--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -13,7 +13,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet"/>
-		<link href="../../css/qiuzhi/qiuzhi.css" rel="stylesheet" />
+		<!--<link href="../../css/qiuzhi/qiuzhi.css" rel="stylesheet" />-->
 	</head>
 
 	<body>
@@ -24,19 +24,19 @@
 					
 					</div>
 				</div>
-				<div class="more-navigation">
+				<!--<div class="more-navigation">
 					<a class="iconfont icon-qita11">
 						<!--导航-->
-					</a>
+					<!--</a>
 					<p>导航</p>
-				</div>
+				</div>-->
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/publicQiuzhiProtocol.js"></script>
-		<script src="../../js/qiuzhi/qiuzhi-home.js"></script>
+		<!--<script src="../../js/qiuzhi/qiuzhi-home.js"></script>-->
 	</body>
 
 </html>
